# context-engine-community

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP-GUIDE.md  pyproject.toml  start.sh
references/: schema.md
skill/: SKILL.md
skill-onboarding/: SKILL.md
src/context_engine/: __init__.py  combined_server.py  db.py  embeddings.py  models.py  nicknames.py  oauth_server.py  schema_meta.py  server.py
tests/: test_db.py
