[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Strukturovana kontextova pamat — MCP server pre Life OS"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
    "mcp-oauth>=0.0.6",
]

[project.scripts]
context-engine = "context_engine.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
